--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-server.servlet.jsp.class-name=com.jung.onlinechat.websocket.SocketTest
+#server.servlet.jsp.class-name=com.jung.onlinechat.websocket.SocketTest
+
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/onlinechat?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+jdbc.username=root
+jdbc.password=123456
+#Mybatis
+mybatis_config_file=mybatis-config.xml
+mapper_path=/mapper/**.xml
+entity_package=con.jung.onlinechat.entity
