--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.6</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.json</groupId>-->
+<!--            <artifactId>json</artifactId>-->
+<!--            <version>20160810</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
@@ -59,6 +64,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
         <!--线程池，供数据库链接使用-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
