完成数据显示

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ jdbc.password=123456
 mybatis_config_file=mybatis-config.xml
 mapper_path=/mapper/**.xml
 entity_package=con.jung.onlinechat.entity
+
+spring.mvc.contentnegotiation.favor-parameter=false
