重构部分代码，完成文件上传/下载

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ entity_package=con.jung.onlinechat.entity
 
 spring.mvc.contentnegotiation.favor-parameter=false
 
+server.tomcat.uri-encoding=utf-8
